...
                .background {
                    RoundedRectangle(cornerRadius: Constants.cornerRadius)
                        .foregroundColor(!isEnabled ? Color.darkGray : .darkYellow)
                        .offset(y: Constants.yOffset)
                }
        }
        .accessibilityIdentifier(label == .increment ? "Stepper increment" : "Stepper decrement")
    }
}

extension CustomStepperButton {
    /// The labels for the different types of stepper buttons.
    enum ButtonLabel {
...
