...
    }
    
    var body: some View {
        VStack {
            Spacer()
            Text(questionType.title)
                .accessibilityIdentifier("Question type label")
            Text(question.question)
                .multilineTextAlignment(.center)
            
            Divider()
            
            Spacer()
...
